merge: integrate PR #53 BE-42 prevent duplicate SELF and appointment slot validation
Co-authored-by: Cursor <cursoragent@cursor.com>